# Calculator_QT

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
themes/styles/: macos_dark.qss  macos_light.qss  ubuntu_dark.qss  ubuntu_light.qss  win11_dark.qss  win11_light.qss
